Add manual approval for terraform apply in Action

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,3 +54,5 @@ jobs:
       run: |
         echo "Plan succeeded and we're on main branch. Applying..."
         terraform apply -auto-approve
+      env: 
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
